# rust_linux_cmd

./: README.md
cat/: Cargo.toml  README.md
cat/src/: main.rs
echo/: Cargo.toml  README.md
echo/src/: main.rs
head/: Cargo.toml  README.md
head/src/: main.rs
tail/: Cargo.toml  README.md
tail/src/: main.rs
