[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.9", features = ["derive"] }
# rand = { git = "https://github.com/rust-lang-nursery/rand" } # 来自网上的仓库
# bar = { path = "../bar" } # 来自本地文件系统的路径